# GearLab

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  ctest.yml
assets/CAD/: Gear_1.FCStd  Gear_2.FCStd
images/: Gear.typ
src/geometry/: BevelGear.cpp  BevelGear.hpp  GearParams.h  GearParams.hpp
src/ui/: BevelGearForm.cpp  BevelGearForm.hpp  OutputDirSelect.cpp  OutputDirSelect.hpp  ParamInput.cpp
src/ui/tests/: test_GearParamInput.cpp
tests/: test_gearparams  test_gearparams.cpp
tests/CAD/: Gear_1.20250809-201719.FCBak  Gear_2.FCStd  Param_Calculations.ods
